test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-owned.good
init-field-dflt-nonnil-borrowed-from-oknil-owned.chpl:8: error: Cannot initialize 'lhs' of type 'borrowed MyClass' from a 'owned MyClass?'
init-field-dflt-nonnil-borrowed-from-oknil-owned.chpl:13: error: done
